// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton -> Snapshot -> Deve corresponder ao componente com as props default 1`] = `
<View
  disabled={true}
  rest={Object {}}
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
  testID="ICON_BUTTON_CONTAINER_TEST_ID"
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontSize": 32,
        },
        undefined,
        Object {
          "fontFamily": "anticon",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
    testID="ICON_BUTTON_ICON_TEST_ID"
  >
    
  </Text>
</View>
`;

exports[`IconButton -> Snapshot -> Deve corresponder ao componente com as props mais utilizadas 1`] = `
<View
  disabled={true}
  rest={Object {}}
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
  testID="ICON_BUTTON_CONTAINER_TEST_ID"
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      Array [
        Object {
          "color": "#FF0000",
          "fontSize": 48,
        },
        undefined,
        Object {
          "fontFamily": "anticon",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
    testID="ICON_BUTTON_ICON_TEST_ID"
  >
    
  </Text>
</View>
`;
